tests/react_abstract_component/react_abstract_component.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:19

React$AbstractComponent is not supported yet.

   3| function test1(x: React$AbstractComponent<any, any, any>) { // Error not yet supported
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:7:19

Cannot use type without exactly 3 type arguments.

   7| function test2(x: React$AbstractComponent<any>) { // Not enough targs
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:11:19

Cannot use type without exactly 3 type arguments.

   11| function test3(x: React$AbstractComponent<any,any>) { // Not enough targs
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:15:19

Cannot use type without exactly 3 type arguments.

   15| function test4(x: React$AbstractComponent<any,any,any,any>) { // Too many targs
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 4 errors
